--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@testing-library/user-event": "^12.6.0",
     "antd": "^4.10.0",
     "moment": "^2.29.1",
+    "patch-package": "^6.2.2",
+    "postinstall-postinstall": "^2.1.0",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-datepicker": "^3.4.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -20,6 +23,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "postinstall": "patch-package",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
